[package]
name = "echoloader"
version = "0.1.0"
authors = ["belohnung <belohnung@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
structopt = "0.3.5"
indicatif = "0.13.0"
tempfile = "3.1.0"